minio/minio-tenant-s3-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: minio-s3
  namespace: minio-tenant
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "s3.ganesh.algueron.io"
  rules:
  - backendRefs:
    - kind: Service
      name: minio
      port: 80
